objects/CC_OO_Customer_Freight__c.object
<CustomObject>
    <fields>
        <fullName>Freight_Handling_code__c</fullName>
        <label>Freight Handling code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Name</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC OO Customer Freights</relationshipLabel>
        <relationshipName>CC_OO_Customer_Freights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_and_Adjustment_Schedule__c</fullName>
        <label>Price and Adjustment Schedule</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Code__c</fullName>
        <label>Route Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Truck_Day__c</fullName>
        <label>Route Truck Day</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo_Account_Number__c</fullName>
        <label>ShipTo Account Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stop_Code__c</fullName>
        <label>Stop Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_Number__c</fullName>
        <label>Zone Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dw_checksum__c</fullName>
        <description>Custom filed for ETL job.</description>
        <label>Dw_checksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>CC OO Customer Freight</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Route_Truck_Day__c</columns>
        <columns>Plant_Name__c</columns>
        <columns>Product_Type__c</columns>
        <columns>ShipTo_Account_Number__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FOO-{00000}</displayFormat>
        <label>CC OO Customer Freight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC OO Customer Freights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>